--- a/shopcartanimation/build.gradle
+++ b/shopcartanimation/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'com.github.florent37:viewanimator:1.1.2'
     implementation 'com.google.android:flexbox:2.0.1'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.20'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation files('libs\\rebound-0.3.8.jar')
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
