--- a/TestSample/build.gradle
+++ b/TestSample/build.gradle
@@ -18,7 +18,12 @@ android {
     }
 
     buildTypes {
-        release {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
+
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -30,6 +35,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    viewBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -45,6 +55,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation files('libs\\rebound-0.3.8.jar')
+    implementation 'com.androidev:boundlayout:1.1.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
+
+    implementation 'com.github.XanderWang:elasticity:1.0.1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
