--- a/TestSample/build.gradle
+++ b/TestSample/build.gradle
@@ -49,11 +49,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'com.github.florent37:viewanimator:1.1.2'
     implementation 'com.google.android:flexbox:2.0.1'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.20'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'io.github.iamyours:flingappbarlayout:1.0.7'
     implementation files('libs\\rebound-0.3.8.jar')
     implementation 'com.androidev:boundlayout:1.1.0'
     implementation 'com.nineoldandroids:library:2.4.0'
