--- a/TestSample/src/main/AndroidManifest.xml
+++ b/TestSample/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".shadow.ShadowButtonActivity"/>
         <activity android:name="com.translation.sample.behavior.FlingBehaviorActivity"/>
         <activity android:name="com.translation.sample.behavior.ViewPagerFlingActivity"/>
+        <activity android:name=".animtator.ObjectAnimationActivity"/>
     </application>
 
 </manifest>
